export enum Role {
  Guerrero = 'guerrero',
  Representante = 'representante',
  Admin = 'admin',
}
